MAB loading as dataset; unified MAB services